--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,10 +12,11 @@
     <string name="action_sign_in">Sign In</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="enter_mobile_number">Enter mobile number</string>
-    <string name="enter_name">Enter name</string>
     <string name="enter_pan_card_number">Enter pan card number</string>
     <string name="enter_uid_number">Enter UID number</string>
     <string name="enter_dob_in_dd_mm_yyyy">Enter dob in DD/MM/YYYY</string>
     <string name="select_your_avatar">Select your avatar</string>
     <string name="register">Register</string>
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
 </resources>
